fix too big h1 headline in mobile and add padding under picture in contact page.

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -259,6 +259,9 @@ h1
   page-break-after: always
 
 @media(max-width: 550px)
+  .main, .headline
+    h1
+      font-size: 3rem
   .home
     h2
       font-size: 3rem
